Fixed responsive menu links

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 			<div class="responsive_menu">
 				<ul>
 					<li><a class="show-1 templatemo_home" href="/index.html"><span class="fa fa-camera-retro"></span> Gallery</a></li>
-					<li><a class="show-2 templatemo_page2" href="/projects."><span class="fa fa-sitemap"></span> Projects</a></li>
+					<li><a class="show-2 templatemo_page2" href="/projects.html"><span class="fa fa-sitemap"></span> Projects</a></li>
 					<!--li><a class="show-3 templatemo_page3" href="#">Services</a></li-->
 					<li><a class="show-5 templatemo_page5" href="/about.html"><span class="fa fa-info-circle"></span>About</a></li>
 				</ul>
