--- a/about.html
+++ b/about.html
@@ -76,9 +76,9 @@
      	<div class="row">
         	<div class="col-md-4 col-sm-12">
             	<div class="templatemo_contactmap">
-      <a href="images/map.jpg" data-rel="lightbox" class="fa fa-expand"><img src="images/map.jpg" alt="contact map"><img src="images/templatemo_contactiframe.png" alt="contact map"></a>
-  </div>
-                </div>
+                <a href="images/map.jpg" data-rel="lightbox" class="fa fa-expand"><img src="images/map.jpg" alt="contact map"><img src="images/templatemo_contactiframe.png" alt="contact map"></a>
+              </div>
+          </div>
             <div class="col-md-3 col-sm-12 leftalign">
             	<div class="templatemo_contacttitle">About</div>
                 <div class="clear"></div>
@@ -112,8 +112,10 @@
                       </ul>
                   </div>
             </div>
-            <div class="col-md-5 col-sm-12">
-            	<img src="images/team/me.jpg">
+            <div class="col-md-4 col-sm-12">
+              	<div class="templatemo_contactmap">
+                  <a href="images/team/me.jpg" data-rel="lightbox" class="fa fa-expand"><img src="images/team/me.jpg" alt="contact map"><img src="images/templatemo_contactiframe.png" alt="contact"></a>
+                </div>
             </div>
         </div>
 
