fixed map div float

--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
      	<div class="row">
         	<div class="col-md-4 col-sm-12">
             	<div class="templatemo_contactmap">
-                <a href="images/map.jpg" data-rel="lightbox" class="fa fa-expand"><img src="images/map.jpg" alt="contact map"><img src="images/templatemo_contactiframe.png" alt="contact map"></a>
+                <a href="images/map.jpg" data-rel="lightbox" class=""><img src="images/map.jpg" alt="contact map"><img src="images/templatemo_contactiframe.png" alt="contact map"></a>
               </div>
           </div>
             <div class="col-md-3 col-sm-12 leftalign">
@@ -112,9 +112,9 @@
                       </ul>
                   </div>
             </div>
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-3 col-sm-12">
               	<div class="templatemo_contactmap">
-                  <a href="images/team/me.jpg" data-rel="lightbox" class="fa fa-expand"><img src="images/team/me.jpg" alt="contact map"><img src="images/templatemo_contactiframe.png" alt="contact"></a>
+                  <a href="images/team/me.jpg" data-rel="lightbox" class=""><img src="images/team/me.jpg" alt="contact map"><img src="images/templatemo_contactiframe.png" alt="contact"></a>
                 </div>
             </div>
         </div>
