website about update

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
   <head>
     <title>Granularity</title>
     <meta name="keywords" content="geospatial, forestry, photography, design" />
-	<meta name="description" content="Personal projects and interests in geospatial, forestry, photography and design." />
+	<meta name="description" content="Geospatial, forestry, photography and design." />
     <!--
     Polygon Template
     https://templatemo.com/tm-400-polygon
