--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
             <div class="hexagon-in1">
               <div class="hexagon-in2" style="background-image: url(images/gallery/DSC_0086small.jpg);">
              	 	<div class="overlay">
-						<a href="images/gallery/DSC_0086.jpg" data-caption="Photography: Glensax open pinewood" data-rel="lightbox" class="fa fa-expand"></a>
+                  <a href="images/gallery/DSC_0086.jpg" data-caption="Photography: Glensax pine trees" data-rel="lightbox" class="fa fa-expand"></a>
+                  <div>Photography: Glensax pine trees</div>
 					</div>
               </div>
             </div>
@@ -107,7 +108,8 @@
           <div class="hexagon-in1">
             <div class="hexagon-in2" style="background-image: url(images/gallery/FacebookCoverRider2.jpg);">
               <div class="overlay">
-          <a href="images/gallery/FacebookCoverRider2.png" data-caption="Projects: Orbea Occam Owners logo design" data-rel="lightbox" class="fa fa-expand"></a>
+          <a href="images/gallery/FacebookCoverRider2.png" data-caption="Design Project: Orbea Occam Owners logo design" data-rel="lightbox" class="fa fa-expand"></a>
+          <div>Design Project: Orbea Occam Owners logo design</div>
         </div>
             </div>
           </div>
@@ -121,7 +123,8 @@
               <div class="hexagon-in2" style="background-image: url(images/gallery/DSC_0151small.jpeg);">
               	<div class="overlay">
 						<a href="images/gallery/DSC_0151.jpeg" data-caption="Photography: Charlie our fox-red labrador" data-rel="lightbox" class="fa fa-expand"></a>
-					</div>
+            <div>Photography: Charlie our fox-red labrador</div>
+          </div>
               </div>
             </div>
           </div>
@@ -134,7 +137,8 @@
               <div class="hexagon-in2" style="background-image: url(images/gallery/igc_plain_mapsmall.jpg);">
               	<div class="overlay">
 						<a href="images/gallery/igc_plain_map.jpg" data-caption="Projects: Golf course mapping with QGIS" data-rel="lightbox" class="fa fa-expand"></a>
-					</div>
+            <div>Projects: Golf course mapping with QGIS</div>
+        	</div>
               </div>
             </div>
           </div>
@@ -147,7 +151,8 @@
               <div class="hexagon-in2" style="background-image: url(images/gallery/pexels-freestocksorg-175389small.jpg);">
               		<div class="overlay">
 						<a href="images/gallery/pexels-freestocksorg-175389.jpg" data-caption="Consultancy Projects: Agricultural efficacy field trials mapping across Europe using QGIS. Photo credit: freestocks.org" data-rel="lightbox" class="fa fa-expand"></a>
-					</div>
+            <div>Projects: Agricultural efficacy field trials mapping across Europe using QGIS</div>
+          </div>
               </div>
             </div>
           </div>
