--- a/about.html
+++ b/about.html
@@ -104,11 +104,14 @@
                     <li class="left fa fa-globe"></li>
                       <li class="right">QGIS + ArcGIS</li>
                       <li class="clear"></li>
+                      <li class="left fa fa-mobile"></li>
+                      <li class="right">Input + Survey123 + ArcGIS Field Maps</li>
+                      <li class="clear"></li>
                       <li class="left fa fa-pencil"></li>
                       <li class="right">GIMP + Inkscape</li>
                       <li class="clear"></li>
                     <li class="left fa fa-camera"></li>
-                    <li class="right">Nikon + Lightroom</li>
+                    <li class="right">Nikon + iPhone + Lightroom</li>
                       </ul>
                   </div>
             </div>
