--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,7 @@
                </div>
                     <div class="col-md-3 col-sm-8 templatemo_servicetxt" >
                       <h2>QGIS Forestry Toolkit</h2>
-                        <p>Coming soon....<br/>The QGIS Forestry Toolkit is designed as a starter pack for anyone looking to map forest stands, comprising a geopackage data model and QGIS project file for symbology, labelling and attribute forms.</p>
+                        <p>Coming soon....</p><p>The QGIS Forestry Toolkit is designed as a starter pack for anyone looking to map forest stands, comprising a geopackage data model and QGIS project file for symbology, labelling and attribute forms.</p>
                     </div>
                     <div class="templatemo_servicecol2">
                     <div class="col-md-3 col-sm-4">
@@ -112,9 +112,8 @@
                           </div></a>
                </div>
                     <div class="col-md-3 col-sm-8 templatemo_servicetxt">
-                      <h2>Ash Dieback Tools</h2>
-                        <p>Coming soon.......</p>
-                        <p>A walkthrough of field surveying utilising the open source mobile application <a href="https://inputapp.io/en/">inputapp.io</a>, with associated QGIS project and geopackage data model.</p>
+                      <h2>QGIS Arb Toolkit</h2>
+                        <p>Coming soon.......</p><p>The QGIS Arboriculture Toolkit is designed as a starter pack for anyone looking to map trees, comprising a geopackage data model and QGIS project file for symbology, labelling and attribute forms.</p>
                     </div>
                     </div>
                </div>
