--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,6 @@
     <script src="js/jquery-1.10.2.min.js"></script>
 	<script src="js/jquery.lightbox.js"></script>
 	<script src="js/templatemo_custom.js"></script>
-
   </head>
   <body>
   	<div class="site-header">
@@ -79,7 +78,7 @@
                   <div class="col-md-3 col-sm-4">
                            <div class="hexagon hexagonteam gallery-item">
                                <div class="hexagon-in1">
-                                <div class="hexagon-in2" style="background-image: url(images/gallery/pexels-lukas-574190.jpg);">
+                                <div class="hexagon-in2" style="background-image: url(images/gallery/qgis1.jpg);">
                                 <div class="overlay templatemo_overlay1">
 
                                 </div>
@@ -100,7 +99,7 @@
                       <a href="images/gallery/Ash_Dieback.jpg" data-caption="Ash Dieback. Photo Credit: Tree Council" data-rel="lightbox">
                            <div class="hexagon hexagonteam gallery-item">
                                <div class="hexagon-in1">
-                                <div class="hexagon-in2" style="background-image: url(images/gallery/Ash_Diebacksmall.jpg);">
+                                <div class="hexagon-in2" style="background-image: url(images/gallery/qgis2.jpg);">
                                 <div class="overlay templatemo_overlay1">
 
                                 </div>
@@ -114,6 +113,48 @@
                     <div class="col-md-3 col-sm-8 templatemo_servicetxt">
                       <h2>QGIS Arb Toolkit</h2>
                         <p>Coming soon.......</p><p>The QGIS Arboriculture Toolkit is designed as a starter pack for anyone looking to map trees, comprising a geopackage data model and QGIS project file for symbology, labelling and attribute forms.</p>
+                    </div>
+                    </div>
+               </div>
+            </div>
+            <div class="clear"></div>
+            <div class="container templatemo_hexteam s_top">
+              <div class="row">
+                  <div class="col-md-3 col-sm-4">
+                    <a href="images/gallery/FacebookCoverRider2.png" data-caption="Design project: Orbea Occam Owners logo" data-rel="lightbox">
+                           <div class="hexagon hexagonteam gallery-item">
+                               <div class="hexagon-in1">
+                                <div class="hexagon-in2" style="background-image: url(images/gallery/esri1.jpg);">
+                                <div class="overlay templatemo_overlay1">
+                                </div>
+                                <div class="clear"></div>
+                                <div class="overlay templatemo_overlaytxt">ArcGIS Forestry Toolkit</div>
+                                </div>
+                            </div>
+                          </div></a>
+               </div>
+                    <div class="col-md-3 col-sm-8 templatemo_servicetxt" >
+                      <h2>ArcGIS Forestry Toolkit</h2>
+                        <p>Coming soon.......</p><p>The ArcGIS Forestry Toolkit is designed as a starter pack for anyone looking to map forests and woodlands, comprising a file geodatabase data model, ArcGIS project file for symbology, labelling and publishing for use in ArcGIS Field Maps, as well as a selection of Survey123 example forms.</p>
+                    </div>
+                    <div class="templatemo_servicecol2">
+                    <div class="col-md-3 col-sm-4">
+                           <div class="hexagon hexagonteam gallery-item">
+                               <div class="hexagon-in1">
+                                <div class="hexagon-in2" style="background-image: url(images/gallery/esri2.jpg);">
+                                <div class="overlay templatemo_overlay1">
+
+                                </div>
+
+                                <div class="clear"></div>
+                                <div class="overlay templatemo_overlaytxt">ArcGIS Arb Toolkit</div>
+                                </div>
+                            </div>
+                          </div>
+               </div>
+                    <div class="col-md-3 col-sm-8 templatemo_servicetxt">
+                      <h2>ArcGIS Arb Toolkit</h2>
+                        <p>Coming soon.......</p><p>The ArcGIS Arboriculture Toolkit is designed as a starter pack for anyone looking to map trees, comprising a file geodatabase data model, ArcGIS project file for symbology, labelling and publishing for use in ArcGIS Field Maps, as well as a selection of Survey123 example forms.</p>
                     </div>
                     </div>
                </div>
@@ -160,7 +201,6 @@
                     </div>
                </div>
             </div>
-
      </div>
      </div>
     <!--team end-->
