--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
     	<div>
           <div class="hexagon hexagon2 gallery-item">
             <div class="hexagon-in1">
-              <div class="hexagon-in2" style="background-image: url(images/gallery/6.jpg);">
+              <div class="hexagon-in2" style="background-image: url(images/gallery/qgis2.jpg);">
               		<div class="overlay">
-						<a href="images/gallery/6.jpg" data-caption="Placeholder image - more of my own content coming soon!" data-rel="lightbox" class="fa fa-expand"></a>
+						<a href="images/gallery/qgis2.jpg" data-caption="Projects: QGIS Arboriculture Toolkit. See Projects section for more details." data-rel="lightbox" class="fa fa-expand"></a>
 					</div>
               </div>
             </div>
