--- a/index.html
+++ b/index.html
@@ -158,14 +158,15 @@
           </div>
         </div>
     </div>
-  	     <div class="hex col-sm-6 hex-offset templatemo-hex-top1 templatemo-hex-top2">
+  	<div class="hex col-sm-6 hex-offset templatemo-hex-top1 templatemo-hex-top2">
     	<div>
           <div class="hexagon hexagon2 gallery-item">
             <div class="hexagon-in1">
               <div class="hexagon-in2" style="background-image: url(images/gallery/qgis2.jpg);">
               		<div class="overlay">
 						<a href="images/gallery/qgis2.jpg" data-caption="Projects: QGIS Arboriculture Toolkit. See Projects section for more details." data-rel="lightbox" class="fa fa-expand"></a>
-					</div>
+            <div>Projects: QGIS Arboriculture Toolkit</div>
+        	</div>
               </div>
             </div>
           </div>
@@ -178,7 +179,8 @@
               <div class="hexagon-in2" style="background-image: url(images/gallery/7.jpg);">
               		<div class="overlay">
 						<a href="images/gallery/7.jpg" data-caption="Placeholder image - more of my own content coming soon!" data-rel="lightbox" class="fa fa-expand"></a>
-					</div>
+            <div>Placeholder</div>
+          </div>
               </div>
             </div>
           </div>
@@ -191,25 +193,27 @@
               <div class="hexagon-in2" style="background-image: url(images/gallery/8.jpg);">
               		<div class="overlay">
 						<a href="images/gallery/8.jpg" data-caption="Placeholder image - more of my own content coming soon!" data-rel="lightbox" class="fa fa-expand"></a>
-					</div>
+            <div>Placeholder</div>
+        	</div>
               </div>
             </div>
           </div>
         </div>
       </div>
-      <div class="hex col-sm-6 templatemo-hex-top1  templatemo-hex-top2">
-      	<div>
-          <div class="hexagon hexagon2 gallery-item">
-            <div class="hexagon-in1">
-              <div class="hexagon-in2" style="background-image: url(images/gallery/9.jpg);">
-              		<div class="overlay">
-						<a href="images/gallery/9.jpg" data-caption="Placeholder image - more of my own content coming soon!" data-rel="lightbox" class="fa fa-expand"></a>
-					</div>
+        <div class="hex col-sm-6 templatemo-hex-top1  templatemo-hex-top2">
+        	<div>
+            <div class="hexagon hexagon2 gallery-item">
+              <div class="hexagon-in1">
+                <div class="hexagon-in2" style="background-image: url(images/gallery/9.jpg);">
+                	<div class="overlay">
+  						      <a href="images/gallery/9.jpg" data-caption="Placeholder image - more of my own content coming soon!" data-rel="lightbox" class="fa fa-expand"></a>
+                    <div>Placeholder</div>
+  					      </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
     	</div>
 	</div>
     <!--div  id="newpost" style="display:none;" class="container answer_list templatemo_gallerytop">
