--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
                </div>
                     <div class="col-md-3 col-sm-8 templatemo_servicetxt" >
                       <h2>QGIS Forestry Toolkit</h2>
-                        <p>Coming soon....</p><p>The QGIS Forestry Toolkit is designed as a starter pack for anyone looking to map forest stands, comprising a geopackage data model and QGIS project file for symbology, labelling and attribute forms.</p>
+                        <p>Stage: Early planning and design.</p><p>The QGIS Forestry Toolkit is designed as a starter pack for anyone looking to map forest stands, comprising a geopackage data model and QGIS project file for symbology, labelling and attribute forms.</p>
                     </div>
                     <div class="templatemo_servicecol2">
                     <div class="col-md-3 col-sm-4">
@@ -112,7 +112,7 @@
                </div>
                     <div class="col-md-3 col-sm-8 templatemo_servicetxt">
                       <h2>QGIS Arb Toolkit</h2>
-                        <p>Coming soon.......</p><p>The QGIS Arboriculture Toolkit is designed as a starter pack for anyone looking to map trees, comprising a geopackage data model and QGIS project file for symbology, labelling and attribute forms.</p>
+                        <p>Stage: Initial Release coming soon.</p><p>The QGIS Arboriculture Toolkit is designed as a starter pack for anyone looking to map trees, comprising a geopackage data model and QGIS project file for symbology, labelling and attribute forms.</p>
                     </div>
                     </div>
                </div>
@@ -135,7 +135,7 @@
                </div>
                     <div class="col-md-3 col-sm-8 templatemo_servicetxt" >
                       <h2>ArcGIS Forestry Toolkit</h2>
-                        <p>Coming soon.......</p><p>The ArcGIS Forestry Toolkit is designed as a starter pack for anyone looking to map forests and woodlands, comprising a file geodatabase data model, ArcGIS project file for symbology, labelling and publishing for use in ArcGIS Field Maps, as well as a selection of Survey123 example forms.</p>
+                        <p>Stage: Early planning and design.</p><p>The ArcGIS Forestry Toolkit is designed as a starter pack for anyone looking to map forests and woodlands, comprising a file geodatabase data model, ArcGIS project file for symbology, labelling and publishing for use in ArcGIS Field Maps, as well as a selection of Survey123 example forms.</p>
                     </div>
                     <div class="templatemo_servicecol2">
                     <div class="col-md-3 col-sm-4">
@@ -154,7 +154,7 @@
                </div>
                     <div class="col-md-3 col-sm-8 templatemo_servicetxt">
                       <h2>ArcGIS Arb Toolkit</h2>
-                        <p>Coming soon.......</p><p>The ArcGIS Arboriculture Toolkit is designed as a starter pack for anyone looking to map trees, comprising a file geodatabase data model, ArcGIS project file for symbology, labelling and publishing for use in ArcGIS Field Maps, as well as a selection of Survey123 example forms.</p>
+                        <p>Stage: Early planning and design.</p><p>The ArcGIS Arboriculture Toolkit is designed as a starter pack for anyone looking to map trees, comprising a file geodatabase data model, ArcGIS project file for symbology, labelling and publishing for use in ArcGIS Field Maps, as well as a selection of Survey123 example forms.</p>
                     </div>
                     </div>
                </div>
